# continuos-integrations-

bookstorewell/: pyproject.toml
bookstorewell/rp-poetry/: manage.py
bookstorewell/rp-poetry/bookstorewell/: asgi.py  settings.py  urls.py  wsgi.py
bookstorewell/rp-poetry/migrate/: apps.py
bookstorewell/rp-poetry/order/: apps.py  factories.py  urls.py
bookstorewell/rp-poetry/order/models/: order.py  product.py
bookstorewell/rp-poetry/order/serializers/: order_serializers.py
bookstorewell/rp-poetry/order/tests/: test_order_viewset.py
bookstorewell/rp-poetry/order/tests/test_viewsets/: test_product_viewset.py
bookstorewell/rp-poetry/order/viewsets/: order_viewset.py
bookstorewell/rp-poetry/product/: admin.py  apps.py  factories.py
bookstorewell/rp-poetry/product/models/: __init__.py  category.py  product.py
bookstorewell/rp-poetry/product/models/__pycache__/: __init__.py  category_serializers.py  order.py
bookstorewell/rp-poetry/product/serializers/: category_seralizers.py  product_serializers.py
